# SINFB206

./: CMakeLists.txt  CMakeLists.txt~  README.md
headers/: agents.h  agents.h~  general.h  general.h~  graphics.h  graphics.h~
sources/: agents.c  agents.c~  general.c  general.c~  graphics.c  graphics.c~  main.c  main.c~
