cmake_minimum_required(VERSION 3.8.2)

SET ( EXECUTABLE dsim )

# add_definitions(-D_PRINT_AGENTS_ID_)

SET (CMAKE_C_COMPILER)

FIND_PACKAGE (OpenGL REQUIRED)
FIND_PACKAGE (GLUT REQUIRED)

if(OPENGL_FOUND)
    link_directories(${OPENGL_LIBRARY_DIR})
    include_directories(${OPENGL_INCLUDE_DIR})
    MESSAGE( STATUS "OPENGL_INCLUDE_DIRS:" ${OPENGL_INCLUDE_DIR} )
endif(OPENGL_FOUND)

if(GLUT_FOUND)
    link_directories(${GLUT_LIBRARY_DIRS})
    include_directories(${GLUT_INCLUDE_DIRS})
    MESSAGE( STATUS "GLUT_INCLUDE_DIRS:" ${OPENGL_INCLUDE_DIR} )
endif(GLUT_FOUND)

FILE ( GLOB SOURCES ./*.c ./sources/*.c )  
FILE ( GLOB HEADERS ./*.h ./headers/*.h )

INCLUDE_DIRECTORIES(/usr/local/include/ /usr/local/lib/ ${CMAKE_CURRENT_BINARY_DIR} )


ADD_EXECUTABLE( ${EXECUTABLE} ${SOURCES})

TARGET_LINK_LIBRARIES( ${EXECUTABLE}  ${LIBS} ${OPENGL_gl_LIBRARY} ${OPENGL_glu_LIBRARY}  ${GLUT_LIBRARIES} -L/usr/local/lib/  "-lm -lgsl -lgslcblas")


# /usr/X11R6/include/
MESSAGE( STATUS "CMAKE_CURRENT_BINARY_DIR:" ${CMAKE_CURRENT_BINARY_DIR} )
MESSAGE( STATUS "SOURCES:" ${SOURCES} )
MESSAGE( STATUS "EXECUTABLE:" ${EXECUTABLE} )
MESSAGE( STATUS "CMAKE_C_COMPILER:" ${CMAKE_C_COMPILER}) 
